infra/generated/aws/sg/security_group.tf
resource "aws_security_group" "tfer--Debian-0020-GNU-002D-Linux-0020-9-0020--002D-Stretch-002D--002D-Debian-0020-GNU-002D-Linux-0020-9-002D-6-0020--002D-Stretch-002D--002D-AutogenByAWSMP-002D-_sg-002D-046e9541075863d46" {
  description = "This security group was generated by AWS Marketplace and is based on recommended settings for Debian GNU/Linux 9 (Stretch) version Debian GNU/Linux 9.6 (Stretch) provided by Debian"

  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "0"
    protocol    = "-1"
    self        = "false"
    to_port     = "0"
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "22"
    protocol    = "tcp"
    self        = "false"
    to_port     = "22"
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "30303"
    protocol    = "tcp"
    self        = "false"
    to_port     = "30303"
  }

  name   = "Debian GNU-Linux 9 -Stretch--Debian GNU-Linux 9-6 -Stretch--AutogenByAWSMP-"
  vpc_id = "vpc-8afcfce3"
}

resource "aws_security_group" "tfer--default_sg-002D-1a46fa72" {
  description = "default VPC security group"

  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "0"
    protocol    = "-1"
    self        = "false"
    to_port     = "0"
  }

  ingress {
    from_port = "0"
    protocol  = "-1"
    self      = "true"
    to_port   = "0"
  }

  name   = "default"
  vpc_id = "vpc-8afcfce3"
}

resource "aws_security_group" "tfer--launch-002D-wizard-002D-1_sg-002D-0d802d7deebd48786" {
  description = "launch-wizard-1 created 2021-08-24T07:57:14.118+01:00"

  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "0"
    protocol    = "-1"
    self        = "false"
    to_port     = "0"
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "22"
    protocol    = "tcp"
    self        = "false"
    to_port     = "22"
  }

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "6060"
    protocol    = "tcp"
    self        = "false"
    to_port     = "6060"
  }

  name   = "launch-wizard-1"
  vpc_id = "vpc-8afcfce3"
}
